@@ -353,7 +353,7 @@ public class ScalePainter implements Plottable, Serializable, ExcludeFromRightCl
 	@Override
 	public int compareTo(final Plottable arg0) {
 		final Plottable other = arg0;
-		return this.getName().compareTo(other.getName());
+		return Integer.valueOf(hashCode()).compareTo(other.hashCode());
 	}
 
 	/**
@@ -414,7 +414,7 @@ public class ScalePainter implements Plottable, Serializable, ExcludeFromRightCl
 	 *         class
 	 */
 	public Integer getLocation() {
-		return new Integer(_location);
+		return Integer.valueOf(_location);
 	}
 
 	/**
@@ -433,7 +433,7 @@ public class ScalePainter implements Plottable, Serializable, ExcludeFromRightCl
 	 * @return the max value
 	 */
 	public Long getScaleMax() {
-		return new Long(_scaleMax);
+		return Long.valueOf(_scaleMax);
 	}
 
 	/**
@@ -442,7 +442,7 @@ public class ScalePainter implements Plottable, Serializable, ExcludeFromRightCl
 	 * @return the step size
 	 */
 	public Long getScaleStep() {
-		return new Long(_scaleStep);
+		return Long.valueOf(_scaleStep);
 	}
 
 	/**
@@ -903,4 +903,22 @@ public class ScalePainter implements Plottable, Serializable, ExcludeFromRightCl
 		return getName();
 	}
 
+	@Override
+	public boolean equals(Object obj) {
+		if(obj==this) {
+			return true;
+		}
+		if(obj instanceof Plottable) {
+			Plottable p = (Plottable)obj;
+			if(compareTo(p)==0) {
+				return true;
+			}
+		}
+		return false;
+	}
+	
+	@Override
+	public int hashCode() {
+		return System.identityHashCode(this);
+	}
 }
